# datasette

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.prod  Dockerfile  Readme.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  metadata.json  prd-zeeker-frontend-split.md  pyproject.toml  requirements.txt
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/notes/: datasette-styling-limits.md
.planning/sketches/: MANIFEST.md  WRAP-UP-SUMMARY.md
plugins/: cache_headers.py  developers_page.py  sources_page.py  string_manager.py  strings.yaml  strip_columns.py
scripts/: capture_baseline.sh  download_from_s3.py  manage.py  verify_api_parity.sh  verify_phase_02.sh  verify_phase_03.sh  verify_phase_04.sh  verify_phase_05.sh  verify_phase_06.sh  verify_phase_07.sh  visual_qa.py
templates/: _footer.html  _header.html  _table-SG-Government-Newsrooms-agc_news.html  _table-SG-Government-Newsrooms-ipos_news.html  _table-SG-Government-Newsrooms-judiciary_news.html  _table-Sglawwatch-about_singapore_law.html  _table-Zeeker-Judgements-judgments.html  _table-sg-gov-newsrooms-acra_news.html  _table-sg-gov-newsrooms-ccs_news.html  _table-sg-gov-newsrooms-mlaw_news.html  _table-sg-gov-newsrooms-mom_news.html  _table-sg-gov-newsrooms-pdpc_news.html  database.html  error.html  index.html  query.html  row.html  table.html
tests/: conftest.py  fixtures.py  test_cache_headers.py  test_download_from_s3.py  test_strip_columns.py
(+203 files in other folders)
