[project]
name = "zeeker-datasette"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.28.0",
    "click>=8.1.3",
    "datasette-matomo>=0.1.2",
    "datasette-search-all>=1.1.4",
    "datasette==0.65.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "datasette-template-sql>=1.0",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
]
